overflow y fix

--- a/css/grape_juice.css
+++ b/css/grape_juice.css
@@ -25,6 +25,7 @@ body, html {
     align-items: center;
 
     width: 70vw;
+    height: 80vh;
 }
 
 .hcard {
@@ -81,7 +82,7 @@ body, html {
 }
 
 #auby {
-    width: 45vw;
+    width: auto;
 }
 
 #bg-container {
